--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -4,9 +4,13 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-    <form method="POST" class="form-group">
-	{% csrf_token %}
-	{{ form|crispy }}
-	<button type="submit" class="btn btn-success">Sign Up</button>
-    </form>
+ <form method="POST" enctype="multipart/form-data" class="form-group">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <label for="photo">Profile Photo (optional):</label>
+    <input type="file" name="photo" accept="image/*" class="form-control mb-3">
+    
+    <button type="submit" class="btn btn-success">Sign Up</button>
+</form>
+
 {% endblock %}
