--- a/post/templates/post/base.html
+++ b/post/templates/post/base.html
@@ -6,11 +6,9 @@
     <title>{% block title %}My Site{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
-  
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -18,13 +16,11 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/">Home</a>
 
-  
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" 
       aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-  
     <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="/auth/signup">Sign Up</a></li>
@@ -37,30 +33,27 @@
 </nav>
 
 <div class="container">
-  <div class="row justify-content-left fixed-bottom mb-3 " style="padding-left: 30px;">
-    <div class="col-auto">
-      <form method="post" action="{% url 'logout' %}">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Logout</button>
-      </form>
-    </div>
-  </div>
+  {% if messages %}
+    {% for message in messages %}
+      <div class="alert alert-info">
+        {{ message }}
+      </div>
+    {% endfor %}
+  {% endif %}
 </div>
-{% if messages %}
-  {% for message in messages %}
-    <div class="alert alert-info">
-      {{ message }}
-    </div>
-  {% endfor %}
-{% endif %}
 
-{% load static %}
+<div class="container">
+  {% block content %}
+  {% endblock %}
+</div>
 
+<!-- Logout button fixed bottom-left, outside all other forms -->
+<div class="position-fixed bottom-0 start-0 mb-3 ms-3">
+  <form method="post" action="{% url 'logout' %}">
+    {% csrf_token %}
+    <button type="submit" class="btn btn-danger">Logout</button>
+  </form>
+</div>
 
-    <div class="container">
-        {% block content %}
-  
-        {% endblock %}
-    </div>
 </body>
 </html>
