--- a/post/templates/post/showcomments.html
+++ b/post/templates/post/showcomments.html
@@ -5,20 +5,20 @@
 {% block content %}
 <div class="container mt-4">
 
-    
+  <!-- Post info using 'post' -->
   <div class="card shadow-sm mb-4" style="max-height: 300px; overflow: hidden;">
     <div class="card-body">
-      <h4 class="card-title">{{ comments.0.post.postname }}</h4>
-      <p class="text-muted">Posted by: {{ comments.0.post.owner.username }} on {{ comments.0.post.date_posted }}</p>
-      <p>{{ comments.0.post.content }}</p>
+      <h4 class="card-title">{{ post.postname }}</h4>
+      <p class="text-muted">Posted by: {{ post.owner.username }} on {{ post.date_posted }}</p>
+      <p>{{ post.content }}</p>
 
-      {% if comments.0.post.banner %}
-        <img src="{{ comments.0.post.banner.url }}" class="img-thumbnail" style="max-height: 200px; object-fit: contain;">
+      {% if post.banner %}
+        <img src="{{ post.banner.url }}" class="img-thumbnail" style="max-height: 200px; object-fit: contain;">
       {% endif %}
     </div>
   </div>
 
-
+  <!-- Comments section -->
   <div class="mb-4">
     <h5>Comments</h5>
     {% if comments %}
@@ -38,10 +38,10 @@
   <!-- Comment Form -->
   <div class="card p-3 shadow-sm">
     <h5>Leave a Comment</h5>
-    <form method="POST" enctype="multipart/form-data">
-      {% csrf_token %}
-      {{ form|crispy }}
-      <button type="submit" class="btn btn-success">Submit Comment</button>
+    <form method="post" class="form-group" action="{% url 'showcomments' post.id %}">
+	    {% csrf_token %}
+	    {{ form|crispy }}
+	  <button type="submit" class="btn btn-primary" name = "submitcomment" value = "submitcomment">submit comment </button>
     </form>
   </div>
 
