--- a/post/templates/post/showmyfeed.html
+++ b/post/templates/post/showmyfeed.html
@@ -7,29 +7,27 @@
 <div class="container d-flex flex-column align-items-center">
 
   {% for post in posts %}
-    <div class="card shadow-sm p-4 mb-4 w-75 text-center">
-      <h4>{{ post.postname }}</h4>
-      <p>{{ post.date_posted }}</p>
-      <p>By : <a href="{% url 'aboutuser' post.owner.id %}">{{post.owner.username}}</a></p>
-      <p>{{ post.content }}</p>
+  <div class="card shadow-sm p-4 mb-4 w-75 text-center">
+    <h4>{{ post.postname }}</h4>
+    <p>{{ post.date_posted }}</p>
+    <p>By : <a href="{% url 'aboutuser' post.owner.id %}">{{post.owner.username}}</a></p>
+    <p>{{ post.content }}</p>
 
-      
-      {% if post.banner %}
-        <img src="{{ post.banner.url }}" 
-             class="img-thumbnail mx-auto d-block mb-3"
-             alt="Post Banner"
-             style="max-height: 300px; width: auto; object-fit: contain;">
-      {% endif %}
-      
-      <h5>Likes: {{ post.likes }}</h5>
 
-      <form class="form-group d-flex justify-content-center gap-2" method="post" action="">
-        {% csrf_token %}
-        <button class="btn btn-primary" type="submit" name="comment" value="{{ post.id }}"> Comments </button>
-        <button class="btn btn-success" type="submit" name="like" value="{{ post.id }}"> Like </button>
-        
-      </form>
-    </div>
+    {% if post.banner %}
+    <img src="{{ post.banner.url }}" class="img-thumbnail mx-auto d-block mb-3" alt="Post Banner"
+      style="max-height: 300px; width: auto; object-fit: contain;">
+    {% endif %}
+
+    <h5>Likes: {{ post.likes }}</h5>
+
+    <form class="form-group d-flex justify-content-center gap-2" method="post" action="">
+      {% csrf_token %}
+      <button class="btn btn-primary" type="submit" name="comment" value="{{ post.id }}"> Comments </button>
+      <button class="btn btn-success" type="submit" name="like" value="{{ post.id }}"> Like </button>
+
+    </form>
+  </div>
   {% endfor %}
 
 </div>
