--- a/post/templates/post/aboutuser.html
+++ b/post/templates/post/aboutuser.html
@@ -36,7 +36,7 @@
                style="max-height: 300px; width: auto; object-fit: contain;">
         {% endif %}
 
-        <h5>Likes: {{ post.likes }}</h5>
+        <h5>Likes: {{ post.likes.count }}</h5>
       </div>
     {% endfor %}
 </div>
