--- a/post/templates/post/showmyposts.html
+++ b/post/templates/post/showmyposts.html
@@ -17,7 +17,7 @@
       style="max-height: 300px; width: auto; object-fit: contain;">
     {% endif %}
 
-    <h5>Likes: {{ post.likes }}</h5>
+    <h5>Likes: {{ post.likes.count }}</h5>
 
     <form class="form-group d-flex justify-content-center gap-2" method="post" action="#">
       {% csrf_token %}
