--- a/post/templates/post/home.html
+++ b/post/templates/post/home.html
@@ -57,6 +57,7 @@
     <div class="d-flex justify-content-center gap-4 mb-3">
       <a href="{% url 'signup' %}" class="btn btn-success btn-lg shadow-sm">Sign Up</a>
       <a href="{% url 'login' %}" class="btn btn-outline-light btn-lg shadow-sm">Login</a>
+      <a href="{% url 'whatsnew' %}" class = "btn btn-outline-light btn-lg shadow-sm">What's New</a>
     </div>
 
     <small class="text-light-50">Already have an account? Just log in and start chatting away!</small>
